--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<a href="./stories/p0.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/p0.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/p0.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
