--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<a href="./stories/geographie.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/geo.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/geo.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
