--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    	<link href="assets/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
    	<link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
   </head>
-  <body style="background-image:url('images/accueil.jpg');">
+  <body style="background-image:url('images/accueil.JPG');">
 
 
   	<nav>
@@ -57,7 +57,7 @@
 			<a href="./stories/geographie.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/geo.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/geo.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
@@ -104,7 +104,7 @@
 			<a href="./stories/p1.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/p1.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/p1.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
@@ -128,7 +128,7 @@
 			<a href="./stories/p2.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/p2.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/p2.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
@@ -151,7 +151,7 @@
 			<a href="./stories/p3.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/cbctz.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/cbctz.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
@@ -175,7 +175,7 @@
 			<a href="./stories/smartup.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/smartup.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/smartup.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
@@ -199,7 +199,7 @@
 			<a href="./stories/citybycitizen.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/cbc.png');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/cbc.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
@@ -222,7 +222,7 @@
 			<a href="./stories/tb.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/tb.jpg');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/tb.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
