--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			<a href="./stories/citybycitizen.html">
 				<div class=" col-lg-3 col-md-4 col-sm-5 tombstone">
 				<div class="row">
-					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/cbc.JPG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
+					<div class="col-xs-12 imageTombStory" style="background-image:url('images/tombstone/cbc.PNG');"> <!--<img src="imgExpTest.jpg" alt="Experience Picture"> -->
 					</div>
 				</div>
 				<div class="row">
