--- a/stories/geographie.html
+++ b/stories/geographie.html
@@ -45,42 +45,42 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/geographie/1.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/geographie/1.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/geographie/2.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/geographie/2.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/geographie/3.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/geographie/3.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/geographie/4.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/geographie/4.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 4</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/geographie/5.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/geographie/5.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 5</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/geographie/6.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/geographie/6.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 6</h2>
                 </div>
