--- a/stories/p3.html
+++ b/stories/p3.html
@@ -45,42 +45,42 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/p3/1.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/p3/1.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/p3/2.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/p3/2.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/p3/3.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/p3/3.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/p3/4.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/p3/4.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 4</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/p3/5.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/p3/5.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 5</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/p3/6.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/p3/6.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 6</h2>
                 </div>
