--- a/stories/smartup.html
+++ b/stories/smartup.html
@@ -45,7 +45,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/smartup/1.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/smartup/1.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
@@ -59,28 +59,28 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/smartup/3.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/smartup/3.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/smartup/4.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/smartup/4.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 4</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/smartup/5.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/smartup/5.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 5</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/smartup/6.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/smartup/6.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 6</h2>
                 </div>
