--- a/stories/citybycitizen.html
+++ b/stories/citybycitizen.html
@@ -45,7 +45,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/cbc/1.PNG');"></div>
+                <div class="fill" style="background-image:url('../images/cbc/1.png');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
