--- a/stories/tb.html
+++ b/stories/tb.html
@@ -45,7 +45,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/tb/1.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/tb/1.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
@@ -59,14 +59,14 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/tb/3.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/tb/3.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/tb/4.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/tb/4.JPG');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 4</h2>
                 </div>
