ajout des liens
ajout des liens

--- a/stories/citybycitizen.html
+++ b/stories/citybycitizen.html
@@ -108,6 +108,16 @@
 
               </p>
     				</div>
+
+            <div class="liens">
+
+                <h3> Quelques liens</h3>
+                <a href="http://citybycitizen.com">CitybyCitizen.com</a>
+                <br/><a href="https://facebook.com/citybycitizen">Page Facebook</a>
+                <br/><a href="http://pltje2015.latribune.fr/finaliste/potier-francois-xavier-citybycitizen-2015/?region=centre-est">Le Prix la Tribune Jeune Entrepreneur</a>
+
+
+            </div>
     		</article>
     </section>
 
