--- a/stories/geographie.html
+++ b/stories/geographie.html
@@ -105,6 +105,16 @@
               <p id="texte">
               </p>
             </div>
+
+             <div class="liens">
+
+                <h3> Quelques liens</h3>
+                <a href="http://www.paris-sorbonne.fr/presentation-3109">UFR de Géographie</a>
+                <br/><a href="http://www.sorbonne.ae/fr/">Paris-Sorbonne University Abu Dhabi</a>
+                <br/><a href="https://www.ucl.ac.uk/">University College London</a>
+
+            </div>
+
         </article>
     </section>
 
