--- a/stories/smartup.html
+++ b/stories/smartup.html
@@ -110,6 +110,18 @@
 
               </p>
     				</div>
+            <div class="liens">
+
+                <h3> Quelques liens</h3>
+                <a href="https://twitter.com/wearesmartup">SmartUP</a>
+                <br/><a href="http://tedxemlyon.fr/fr/tedx-emlyon-2015-creativity-is-intelligence-having-fun/">Tedx EMLYON</a>
+                <br/><a href="http://socialimpactweekend.com/">Social Impact Weekend</a>
+                <br/><a href="https://www.facebook.com/Makersinnovationchallenge/">Makers Innovation Challenge (Facebook)</a>
+                <br/><a href="http://acteursdeleconomie.latribune.fr/innovation/innovation-technologique/2015-10-29/blend-web-mix-explore-la-sante-connectee-du-chat.html">Makers Innovation Challenge (La Tribune)</a>
+
+
+            </div>
+
     		</article>
     </section>
 
