--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   					<h4> Rubriques</h4>
 					<a href="#posture">Valeurs</a>
   					<br/><a href="#stories">Stories</a>
-  					<br/><a href="./stories/ref/references.html">références</a>
+  					<br/><a href="./stories/references.html">références</a>
   				</div>
   				<div class="col-md-6" id="contact">
   					<h4> Contact</h4>
