--- a/stories/references.html
+++ b/stories/references.html
@@ -45,28 +45,28 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/ref/1.JPG');"></div>
+                <div class="fill" style="background-image:url('../images/ref/1.png');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/ref/2.JPG');"></div>
+                <div class="fill" style="background-image:url('../images/ref/2.png');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/ref/3.JPG');"></div>
+                <div class="fill" style="background-image:url('../images/ref/3.png');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/ref/4.JPG');"></div>
+                <div class="fill" style="background-image:url('../images/ref/4.png');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 4</h2>
                 </div>
@@ -99,7 +99,7 @@
                 <h3>Pour construire ce site</h3>
                 <a href="http://getbootstrap.com/">Boostrap - pour le framework</a>
                 <br/><a href="https://blackrockdigital.github.io/startbootstrap-full-slider/#">BlackRockDigital - pour le slider</a>
-                <br/><a href="https://jquery.com/">jquery- le framework javascript (mise à contribution pour le slider)</a>
+                <br/><a href="https://jquery.com/">jquery- le framework javascript (mis à contribution pour le slider)</a>
 
 
             </div>
