--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
 		</div>
   	</section>
 	<section>
+		<div class="container">
 		<div id="disqus_thread"></div>
 <script>
 
@@ -292,7 +293,9 @@ var disqus_config = function () {
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	  </section>
+	 
+	</div>
+	</section>
 
   	<footer  class="footer navbar-bottom">
   		<div class="container">
