--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
 		</div>
   	</section>
-	<section>
+	<section  style="background-color: white;">
 		<div class="container">
 		<div id="disqus_thread"></div>
 <script>
